# papeline

./: .gitignore  Cargo.toml  README.md  example.toml  flake.nix  justfile
crates/papeline-cli/: Cargo.toml
crates/papeline-cli/src/: config.rs  main.rs
crates/papeline-cli/src/cmd/: fetch.rs  join.rs  mod.rs  run.rs  status.rs  store.rs
crates/papeline-core/: Cargo.toml
crates/papeline-core/benches/: parquet_write.rs
crates/papeline-core/src/: accumulator.rs  error.rs  filter.rs  lance_writer.rs  lib.rs  logging.rs  progress.rs  retry.rs  semaphore.rs  shard_processor.rs  shutdown.rs  sink.rs  stream.rs  work_queue.rs
crates/papeline-join/: Cargo.toml
crates/papeline-join/src/: config.rs  lib.rs  sql.rs
crates/papeline-join/tests/: integration.rs
crates/papeline-openalex/: Cargo.toml
crates/papeline-openalex/benches/: parse_oa.rs
crates/papeline-openalex/examples/: fetch.rs  fetch_openalex.rs
crates/papeline-openalex/src/: abstract_decode.rs  config.rs  lib.rs  manifest.rs  runner.rs  schema.rs  state.rs  worker.rs
crates/papeline-openalex/src/transform/: author.rs  funder.rs  institution.rs  mod.rs  publisher.rs  source.rs  topic.rs  work.rs
crates/papeline-pubmed/: Cargo.toml
crates/papeline-pubmed/benches/: parse_pubmed.rs
crates/papeline-pubmed/src/: config.rs  lib.rs  manifest.rs  parser.rs  runner.rs  schema.rs  transform.rs  worker.rs
crates/papeline-pubmed/tests/: integration.rs
crates/papeline-semantic-scholar/: Cargo.toml
crates/papeline-semantic-scholar/benches/: parse_s2.rs
crates/papeline-semantic-scholar/examples/: fetch.rs
crates/papeline-semantic-scholar/src/: api.rs  cli.rs  config.rs  coverage.rs  lib.rs  runner.rs  schema.rs  state.rs  stats.rs  transform.rs  url_expiry.rs  worker.rs
crates/papeline-store/: Cargo.toml
crates/papeline-store/src/: hash.rs  lib.rs  manifest.rs  run_config.rs  stage.rs  store.rs
nix/: formatter.nix  shell.nix
