[package]
name = "papeline-openalex"
version.workspace = true
edition.workspace = true

[dependencies]
papeline-core.workspace = true
arrow.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
rayon.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
chrono.workspace = true
indicatif.workspace = true
[dev-dependencies]
tempfile.workspace = true
